fix: Adicionando z-index para que a barra fixa passe por cima dos produtos

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   background-color: blue;
+  z-index: 1;
 }
 
 .header > div {
